syntax = "proto3";

option csharp_namespace = "EnrollmentSystem.GradeService.Grpc";

service GradeGrpc {
  rpc GetStudentGrades (StudentGradesRequest) returns (GradeListReply);
  rpc GetCourseGrades (CourseGradesRequest) returns (GradeListReply);
  rpc UploadGrade (UploadGradeRequest) returns (UploadGradeReply);
}

message StudentGradesRequest {
  int32 studentId = 1;
}

message CourseGradesRequest {
  int32 courseId = 1;
}

message GradeReply {
  int32 id = 1;
  int32 studentId = 2;
  int32 courseId = 3;
  string courseName = 4;
  string courseCode = 5;
  double numericGrade = 6;
  string letterGrade = 7;
  string semester = 8;
  string datePosted = 9;
}

message GradeListReply {
  repeated GradeReply grades = 1;
}

message UploadGradeRequest {
  int32 studentId = 1;
  int32 courseId = 2;
  double numericGrade = 3;
  string letterGrade = 4;
}

message UploadGradeReply {
  bool success = 1;
  string error = 2;
}